# Civiclens

./: .env.example  .env.production.example  .gitignore  CITIZEN_PORTAL_ACTION_PLAN.md  CITIZEN_PORTAL_AUDIT.md  CITIZEN_PORTAL_PROGRESS.md  Caddyfile  DASHBOARD_ACTIONS_AUDIT.md  DASHBOARD_IMPROVEMENTS_COMPLETE.md  DEVELOPMENT_PROGRESS_UPDATE.md  DUPLICATE_DETECTION_ANALYSIS.md  FCM_IMPLEMENTATION_GUIDE.md  GIT_COMMIT_CHECKLIST.md  HIGH_PRIORITY_FIXES_PROGRESS.md  MOBILE_APP_COMPREHENSIVE_ANALYSIS.md  NOTIFICATION_SYSTEM_COMPREHENSIVE_AUDIT.md  NOTIFICATION_SYSTEM_SUMMARY.md  README.md  REJECTION_WORKFLOW_FIX_PLAN.md  REJECTION_WORKFLOW_IMPLEMENTATION_COMPLETE.md  RELEASE_v2.2.0.md  START-ALL.ps1  STOP-ALL.ps1  TIER1_IMPLEMENTATION_SUMMARY.md  TOAST_MIGRATION_COMPLETE.md  TOAST_MIGRATION_PROGRESS.md  UI_FEEDBACK_FIXES.md  cloud_sync.txt  docker-compose.yml  ratelimit control.txt
.agent/: ANALYTICS_PAGE_UPDATE.md  CREATE_REPORT_ANALYSIS.md  CREATE_REPORT_SUMMARY.md  DASHBOARD_ANALYSIS.md  DASHBOARD_OPTIMIZATION_SUMMARY.md  DASHBOARD_VISUAL_COMPARISON.md  DEPARTMENTS_PAGE_UPDATE.md  EDIT_MODAL_INTEGRATION.md  INSIGHTS_PAGE_UPDATE.md  MANAGE_PAGE_OPTIMIZATION.md  MEDIA_TYPE_FIX.md  OFFICERS_PAGE_UPDATE.md  PDF_EXPORT_ANALYSIS.md  PDF_EXPORT_COMPLETE.md  PDF_EXPORT_FINAL.md  PDF_EXPORT_SUMMARY.md  PREDICTIONS_PAGE_UPDATE.md  QUICK_EDIT_MODAL_UPDATE.md  REPORTS_PAGE_ANALYSIS.md  REPORTS_PAGE_SUMMARY.md  REPORT_DETAILS_INTEGRATION.md  TASK_PAGE_OPTIMIZATION.md  TASK_SEARCH_FIX.md  UI_CONSISTENCY_ANALYSIS.md  UI_IMPLEMENTATION_PLAN.md  UI_PROJECT_SUMMARY.md  UI_STANDARDS_QUICK_REFERENCE.md
.jules/: bolt.md  sentinel.md
civiclens-admin/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
civiclens-backend/: .dockerignore  .env.example  Dockerfile  README.md  dockeruseful commands.md  pyproject.toml  requirements-ai.txt
civiclens-backend/alembic/: env.py
civiclens-backend/alembic/versions/: add_duplicate_clustering_tables.py  add_report_bookmarks.py  add_validation_model.py  c3d039251b8f_add_first_last_name_to_user.py
civiclens-backend/app/: config.py  main.py
civiclens-backend/app/api/v1/: ai_insights.py  analytics.py  auth.py  auth_extended.py  health.py  media.py  reports.py  reports_complete.py  sync.py  users.py
civiclens-backend/app/core/: audit_logger.py  background_tasks.py  database.py  dependencies.py  middleware.py  rate_limiter.py
civiclens-backend/app/crud/: report.py  user.py
civiclens-backend/app/models/: __init__.py  duplicate_cluster.py  report.py  user.py  validation.py
civiclens-backend/app/schemas/: auth.py  report.py  user.py
civiclens-backend/app/services/: ai_pipeline_service.py  email_service.py  file_upload_service.py  notification_service.py  report_service.py
civiclens-backend/app/services/ai/: category_classifier.py  config.py  duplicate_detector.py  enhanced_duplicate_detector.py  gpu_manager.py  urgency_scorer.py
civiclens-backend/app/templates/email/: otp.html
civiclens-backend/app/tests/: conftest.py
civiclens-backend/app/workers/: ai_worker.py  metrics_calculator.py  sla_monitor.py  stale_task_monitor.py
civiclens-backend/archive/: QUICK_UPLOAD_REFERENCE.md  quick_pipeline_test.py  upload_complaints.bat  upload_test_complaints_auto.py  upload_test_complaints_seeded.py
civiclens-backend/docs/: UPLOAD_COMPLAINTS_GUIDE.md  UPLOAD_FLOW_EXPLAINED.md
civiclens-backend/scripts/: FRESH_SETUP.ps1  requeue_failed_safe.py  seed_all.py  test_ai_complaints.json  upload_test_complaints_interactive.py
civiclens-backend/tests/: test_dummy.py
civiclens-client/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json
civiclens-mobile/: App.tsx  (+10 more)
(+195 files in other folders)
