[project]
name = "civiclens-backend"
version = "1.0.0"
description = "CivicLens - Advanced Civic Issues Management Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "CivicLens Team", email = "dev@civiclens.io" }
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "starlette==0.35.1",
    "pydantic[email]==2.5.3",
    "pydantic-settings==2.1.0",
    "pydantic-core==2.14.6",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "geoalchemy2==0.14.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    "cryptography==42.0.0",
    "argon2-cffi==25.1.0",
    "pyotp==2.9.0",
    "fastapi-mail==1.4.1",
    "aiosmtplib==2.0.2",
    "email-validator==2.2.0",
    "exponent-server-sdk==2.2.0",
    "minio==7.2.3",
    "pillow==10.2.0",
    "python-magic==0.4.27",
    "python-magic-bin==0.4.14; sys_platform == 'win32'",
    "aiofiles==23.2.1",
    "pandas==2.2.0",
    "numpy==1.26.3",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "hiredis==2.3.2",
    "click==8.3.1",
    "rich==14.2.0",
    "python-json-logger==2.0.7",
    "sentry-sdk==1.40.0",
    "httpx==0.26.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "anyio==4.12.1",
    "sniffio==1.3.1",
    "certifi==2026.2.25",
    "requests==2.32.5",
    "urllib3==1.26.18",
    "idna==3.11",
    "charset-normalizer==3.3.2",
    "async-timeout==5.0.1",
    "greenlet==3.3.2",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "torch==2.2.2",
    "transformers==4.40.2",
    "sentence-transformers==2.7.0",
    "huggingface-hub==0.23.0",
    "accelerate==0.30.1",
    "scikit-learn==1.4.0",
    "scipy==1.16.3",
    "nltk==3.8.1",
    "sentencepiece==0.2.1",
    "sacremoses==0.1.1",
    "psutil==5.9.8",
    "joblib==1.3.2",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "packaging==26.0",
    "setuptools==65.5.0",
    "six==1.17.0",
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
    "pytz==2024.1",
    "tzdata==2025.3",
    "pyyaml==6.0.3",
    "jinja2==3.1.3",
    "markupsafe==3.0.3",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "pygments==2.19.2",
    "qrcode[pil]==7.4.2",
    "pypng==0.20220715.0",
    "reportlab==4.0.9",
    "blinker==1.9.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "pyasn1==0.6.2",
    "rsa==4.9.1",
    "pycparser==3.0",
    "cffi==2.0.0",
    "pycryptodome==3.23.0",
    "annotated-types==0.7.0",
    "aiosqlite==0.19.0",
    "colorama==0.4.6",
    "h11==0.16.0",
    "uvloop==0.19.0; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "faker>=22.4.0",
    "ruff>=0.15.0",
    "httpx>=0.26.0",
    "black>=23.12.0",
    "isort>=5.13.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "COM", "C4", "DTZ", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "PLE", "PLR", "PLW", "RUF"]
ignore = ["D100", "D104", "D107", "ANN101", "ANN102", "PLR0913"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
packages = ["app"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_machine == 'x86_64' or sys_platform == 'win32'" },
  { index = "pypi", marker = "platform_machine == 'aarch64'" }
]
